Dockerized the trade_producer svc \n The image is not optimized but works

--- a/services/trade_producer/Makefile
+++ b/services/trade_producer/Makefile
@@ -1,2 +1,12 @@
-run:
+run-dev:
+	cp dev.env .env
 	poetry run python src/main.py
+
+build:
+	docker build -t trade-producer .
+
+run:
+	docker run \
+	 --network=redpanda_network \
+	 --env-file prod.env \
+	 trade-producer
