--- a/services/trade_producer/Makefile
+++ b/services/trade_producer/Makefile
@@ -1,12 +1,22 @@
-run-dev:
-	cp dev.env .env
+run-live-dev:
+	cp live.dev.env .env
+	poetry run python src/main.py
+
+run-historical-dev:
+	cp historical.dev.env .env
 	poetry run python src/main.py
 
 build:
 	docker build -t trade-producer .
 
-run:
+run-live: build
 	docker run \
 	 --network=redpanda_network \
-	 --env-file prod.env \
+	 --env-file live.prod.env \
+	 trade-producer
+
+run-historical: build
+	docker run \
+	 --network=redpanda_network \
+	 --env-file historical.prod.env \
 	 trade-producer
