--- a/services/trade_producer/pyproject.toml
+++ b/services/trade_producer/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 quixstreams = "^2.10.0"
 loguru = "^0.7.2"
 websocket-client = "^1.8.0"
+requests = "^2.32.3"
+pandas = "^2.2.3"
 
 
 [build-system]
