Added the custom timestamp extractor, Updated Makefile for historical data transformation
> To use the timestamp from the message (when the trade occurred), instead of the default timestamp when the message is ingested to Kafka

> To run historical transformation in container

--- a/services/trade_to_ohlc/Makefile
+++ b/services/trade_to_ohlc/Makefile
@@ -14,3 +14,9 @@ run-live: build
 	 --network=redpanda_network \
 	 --env-file live.prod.env \
 	 trade-to-ohlc
+
+run-historical: build
+	docker run \
+	 --network=redpanda_network \
+	 --env-file historical.prod.env \
+	 trade-to-ohlc
