Resolved the Hopsworks reconnection behavior. Dockerized the topic_to_feature_store service

--- a/services/topic_to_feature_store/Makefile
+++ b/services/topic_to_feature_store/Makefile
@@ -5,3 +5,13 @@ run-live-dev:
 run-historical-dev:
 	cp historical.dev.env .env
 	poetry run python src/main.py
+
+build: 
+	docker build --no-cache -t topic_to_feature_store .
+
+run-live: build
+	docker run \
+		--network=redpanda_network \
+		--env-file live.prod.env \
+		--env-file credentials.env \
+		topic_to_feature_store
