Dockerized the historical topic to feature store

--- a/services/topic_to_feature_store/Makefile
+++ b/services/topic_to_feature_store/Makefile
@@ -15,3 +15,10 @@ run-live: build
 		--env-file live.prod.env \
 		--env-file credentials.env \
 		topic_to_feature_store
+
+run-historical: build
+	docker run \
+		--network=redpanda_network \
+		--env-file historical.prod.env \
+		--env-file credentials.env \
+		topic_to_feature_store
